--- a/_layouts/tmx_viewer.html
+++ b/_layouts/tmx_viewer.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<article class="post-container tmx-viewer-page">
+<article class="post-container tmx-viewer">
 
     <div class="back-nav">
         <a href="{{ '/' | relative_url }}">&larr; Back to Archive</a>
